# hearts

./: .gitignore  AI_ALGORITHMS.md  AI_STRENGTH.md  AI算法详解.md  ANALYSIS.md  Algorithm.cpp  CMakeLists.txt  CardGameState.cpp  GameState.cpp  Hearts.cpp  HeartsGameHistories.cpp  HeartsGameHistories.h  Makefile  Readme.txt  SUIT_STRENGTH.md  ThreadPool.h  Timer.cpp  Timer.h  UCT.cpp  UCT.h  WORLD_MODELS.md  benchmark.cpp  fpUtil.h  game_core_test.cc  iiMonteCarlo.cpp  iiMonteCarlo.h  main.cpp  mt_random.cpp  perf_benchmark.cc  queen_spade_tests.cpp  resource_leak_test.cc  tests.cpp  thread_pool_test.cc  utility_test.cc  世界模型详解.md
doc/: SUIT_STRENGTH.md  ai_game_engine_interaction.puml  trick_play.puml
server/: AIRequestHandler.cpp  AIRequestHandler.h  API_SPEC.md  HeartsAIServer.cpp  HeartsAIServer.h  JsonProtocol.cpp  JsonProtocol.h  ServerMain.cpp  test_api.py  test_move.py  test_play_one.py  test_server.bat  test_server.py  test_server.sh
